# qdft

./: Cargo.toml  README.md
builds/: qdfs  qdfs-arm7l  qdserver-aarch64  tftp-aarch64
src/: cli.rs  lib.rs  main.rs
src/server/: main.rs  server.rs
